# daybreak

./: .eslintrc.js  .gitignore  .nvimlog  AGENTS.md  GEMINI.md  README.md  daybreak.desktop  package-lock.json  package.json  powershell.ps1  pyproject.toml  tsconfig.json
.claude/: settings.local.json
daybreak/: pyproject.toml  setup.py
daybreak/src/daybreak/: colors.py  config.py  interactive.py  main.py  shell_setup.py  themes.py  windows_tray.py
daybreak/src/daybreak/adapters/system/: __init__.py  kde.py  windows.py
daybreak/src/daybreak/adapters/terminal/: __init__.py  builders.py  jsonc.py  windows_terminal.py  wrappers.py
daybreak/src/daybreak/browsers/: __init__.py  base.py
daybreak/src/daybreak/cli/: main.py  runtime.py
daybreak/src/daybreak/core/: __init__.py  orchestrator.py  theme_model.py  theme_registry.py  theme_transform.py
daybreak/src/daybreak/terminals/: kitty.py  neovim.py  universal.py
daybreak/tests/: test_cli_smoke.py  test_shell_setup.py  test_theme_registry.py  test_windows_integrations.py  test_windows_tray.py
linux/systemd/: daybreak-dark.timer  daybreak-light.service
src/: colors.ts  config.ts  themes.ts
src/core/: artifacts.ts  orchestrator.ts  themeModel.ts  themeRegistry.ts  themeTransform.ts
src/daybreak/: __main__.py  config.py  (+5 more)
systemd/: daybreak-dark.service  daybreak-light.service  daybreak-light.timer
tests/: test_accent_tokens.py  test_artifacts.py  test_cli_smoke.py  test_config_migration.py  test_linux_tray.py  test_neovim_terminal.py  test_orchestrator_reload.py  test_shell_setup.py  test_windows_tray.py
(+29 files in other folders)
