[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daybreak"
version = "0.1.0"
description = "A CLI tool to toggle system and terminal themes."
authors = [
    {name = "Your Name", email = "you@example.com"},
]
dependencies = [
    "toml",
]
requires-python = ">=3.7"

[project.optional-dependencies]
linux-tray = [
    "dbus-python>=1.2",
]

[project.scripts]
daybreak = "daybreak.main:main"
daybreak-tray-linux = "daybreak.linux_tray:run_linux_tray"

[project.gui-scripts]
daybreak-tray = "daybreak.windows_tray:run_windows_tray"
