[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daybreak"
version = "0.1.0"
description = "A CLI tool to toggle system and terminal themes."
authors = [
    {name = "Your Name", email = "you@example.com"},
]
dependencies = []
requires-python = ">=3.7"

[project.scripts]
daybreak = "daybreak.main:main"
